karavan-cloud/minikube/karavan-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: karavan
    app.kubernetes.io/part-of: karavan
  name: karavan
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: karavan.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karavan
                port:
                  number: 8080
